# open-workspace-builder

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  build.py  config.example.yaml  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  pyrightconfig.strict.json  sitemap.xml  uv.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  release-notify-slack.yml  release.yml  suppression-monitor.yml
.owb/: drift-baseline.json  quarantine-bypasses.jsonl
adr/: index.html
assets/css/: extra.css
assets/js/: mermaid-zoom.js
concepts/architecture/: index.html
concepts/configuration/: index.html
concepts/phases/: index.html
concepts/security/: index.html
content/context/: agent-config.template.md  claude-md.template.md  working-style.template.md
content/policies/: _index.md  allowed-licenses.md  development-process.md  integration-verification-policy.md  oss-health-policy.md  product-development-workflow.md
content/skills/oss-health-check/: SKILL.md
content/skills/retro/: SKILL.md
content/skills/skill-creator/: SKILL.md
content/skills/sprint-complete/: SKILL.md
content/skills/sprint-plan/: SKILL.md
content/skills/token-analysis/: SKILL.md
content/templates/: adr.md  budget-draw-schedule.md  decision-record.md  financing-tracker.md  post-mortem.md  prd.md  project-index.md  readme.md  research-note.md  research-spike.md  roadmap.md  sdr.md  session-log.md  spec.md  status.md  story.md  threat-model.md
credits/: index.html
docs/: README.md  adr.md  credits.md  howto-first-run.md  howto-sbom.md  howto-upgrade.md  index.md  prd.md  public-api-changes.md  pyright-basic-inventory.json  pyright-strict-inventory.json  scanner-redos-audit.md  sdr.md  spec-skill-evaluator.md  threat-model.md
docs/assets/css/: extra.css
docs/assets/js/: mermaid-zoom.js
docs/concepts/: architecture.md  configuration.md  idp-for-ai-coding.md  phases.md  policy-as-code.md  sbom.md  security.md  supply-chain-security.md
docs/contributing/: release-process.md
docs/getting-started/: first-run-fresh.md  how-it-works.md  install.md  why-owb.md
docs/guides/: library-usage.md
docs/reference/: cli.md  glossary.md  license-compliance.md  lifecycle.md
docs/releases/: v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md  v1.1.0.md  v1.10.0.md  v1.11.0.md  v1.12.0.md  v1.13.0.md  v1.14.0.md  v1.14.1.md  v1.16.0.md  v1.17.0.md  v1.18.0.md  v1.18.1.md  v1.18.2.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.8.0.md  v1.9.0.md
docs/workflow/: design-to-operate.md
ecc-curated/agents/: code-reviewer.md  planner.md  tdd-guide.md
ecc-curated/rules/common/: sast-scanning.md  vault-policies.md
examples/: mcp-config.json
examples/sbom/: example.cdx.json
getting-started/first-run-fresh/: index.html
getting-started/how-it-works/: index.html
getting-started/install/: index.html
getting-started/why-owb/: index.html
guides/library-usage/: index.html
howto-first-run/: index.html
howto-upgrade/: index.html
overrides/: home.html
prd/: index.html
reference/cli/: index.html
reference/license-compliance/: index.html
reference/lifecycle/: index.html
releases/v0.3.0/: index.html
releases/v0.4.0/: index.html
releases/v0.5.0/: index.html
releases/v0.5.1/: index.html
releases/v0.6.0/: index.html
releases/v0.7.0/: index.html
releases/v0.8.0/: index.html
releases/v1.0.0/: index.html
releases/v1.1.0/: index.html
releases/v1.2.0/: index.html
scripts/: commit-msg-check.py  extract_changelog.py  generate_sbom.py  pyright-gate.py
sdr/: index.html
search/: search_index.json
skills/mobile-inbox-triage/: SKILL.md
src/claude_workspace_builder/: cli.py  config.py
src/open_workspace_builder/: __init__.py  _llm_json.py  cli.py  config.py  enforcement.py  mcp_server.py  stage.py
tests/: conftest.py  test_agent_config.py  test_audit_script.py  test_baseline_metrics.py  test_build_integration.py  test_builder_stage.py  test_cli_auth.py  test_cli_contract.py  test_cli_stage.py  test_commit_msg_check.py  test_config.py  test_config_overlay.py  test_context_lifecycle.py  test_differ.py  test_dry_run_skip.py  test_ecc_trust.py  test_ecc_update.py  test_enforcement.py  test_extract_changelog.py  test_generate_sbom.py  test_hooks.py  test_init_safety.py  test_llm_backend.py  test_llm_json.py  test_mcp_server.py  test_migrator.py  test_packaging.py  test_pipeline_smoke.py  test_policy_deployment.py  test_pyright_gate.py  test_quarantine.py  test_registry.py  test_registry_patterns.py  test_registry_versioning.py  test_reputation_wiring.py  test_sca_sast_defaults.py  test_secrets.py  test_secrets_factory.py  test_secrets_scanner.py  test_secrets_shim.py  (+10 more)
tests/evaluator/: test_classifier.py  test_generator.py  test_judge.py  test_manager.py  test_org_layer.py  test_persistence.py  test_scorer.py  test_spec_validator.py  test_trust.py
tests/hooks/: test_dependency_gate_parser.py  test_security_writetime.py  test_sprint_close_reminder.py
tests/sbom/: test_builder.py  test_capability.py  test_cli.py  test_diff.py  test_discover.py  test_example_fixture.py  test_example_resolver.py  test_license.py  test_normalize.py  test_provenance.py  test_quarantine.py  test_scan_integration.py  test_show.py  test_spdx.py  test_verify.py  test_workflow_ac.py  test_workflow_ac_s107b.py
tests/security/: test_dep_audit.py  test_drift.py  test_gate.py  test_license_audit.py  test_patterns.py  test_patterns_redos.py  test_reputation.py  test_s071_scanner_gaps.py  test_sast.py  test_scanner_integration.py  test_semantic.py  test_structural.py  test_suppression_monitor.py
tests/sources/: test_audit.py  test_discovery.py  test_updater.py  test_url_validator.py
tests/tokens/: test_budget.py  test_calculator.py  test_cli_level_c.py  test_cli_tokens.py  test_exports.py  test_forecast.py  test_ledger.py  test_models.py  test_parser.py  test_pricing.py  test_skill_integration.py
threat-model/: index.html
(+187 files in other folders)
