[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-workspace-builder"
version = "1.10.0"
description = "Scaffold, maintain, and secure AI coding workspaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "originalrgsec"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# litellm upper bound: versions 1.82.7 and 1.82.8 were compromised in a supply
# chain attack on 2026-03-24 (Snyk SNYK-PYTHON-LITELLM-15762713). v1.83.0
# reviewed 2026-04-09: Sigstore OIDC attestation confirmed, CI hardening
# (cosign signing, pinned Codecov SHA, OpenSSF Scorecard) committed 2026-03-28
# through 2026-03-31. No formal PIR published, but hardening evidence is
# sufficient. Fixes CVE-2026-35030 (critical), CVE-2026-35029 (high), and
# pass-the-hash auth bypass (high). Quarantine: 9 days (published 2026-03-31).
llm = [
    "litellm>=1.40.0,<=1.83.0",
]
security = [
    "pyyaml>=6.0",
    "litellm>=1.40.0,<=1.83.0",
]
keyring = [
    "keyring>=24.0",
]
age = [
    "pyrage>=1.0",
]
secrets = [
    "keyring>=24.0",
    "pyrage>=1.0",
]
audit = [
    "pip-audit>=2.7.0",
]
# SBOM support (OWB-S107a): CycloneDX 1.6 schema + serializer. The library is
# Apache-2.0 (allowed) and was already transitive via pip-audit; S107a
# promotes it to a direct dependency so the relationship is explicit. Pinned
# to ≤10 to avoid the 11.x major bump, which will be evaluated separately
# during S107b or S107c.
sbom = [
    "cyclonedx-python-lib>=9.0,<11",
]
sast = [
    "semgrep>=1.50.0",
]
mcp = [
    "mcp>=1.0.0",
]
sheets = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]
xlsx = [
    "xlsxwriter>=3.0",
]
hooks = [
    "pre-commit>=3.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "build",
    "pip-audit>=2.7.0",
    "semgrep>=1.50.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/originalrgsec/open-workspace-builder"
Repository = "https://github.com/originalrgsec/open-workspace-builder"
Issues = "https://github.com/originalrgsec/open-workspace-builder/issues"

[project.scripts]
owb = "open_workspace_builder.cli:owb"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
open_workspace_builder = ["py.typed", "security/data/*.yaml", "data/registry/**/*.yaml", "data/*.toml", "evaluator/data/*.yaml", "evaluator/data/**/*.yaml", "content/**/*.md", "vendor/**/*.md", "vendor/**/*.yaml", "sbom/_data/**"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
